# photoropter

./: .hgignore  CHANGES.txt  CMakeLists.txt  INSTALL.txt  LICENSE.txt  TODO.txt  astylerc  basic_image.cpp  basic_image.h  basic_image_impl.cpp  basic_image_impl.h  channel_range.h  channel_storage.h  colour_correction_model.cpp  colour_correction_queue.cpp  correction_model_base.cpp  correction_model_queue.cpp  doxygen.conf  doxygen.conf.in  exception.cpp  exception.h  format.sh  geom_correction_model.cpp  geom_correction_queue.cpp  gil_storagetypes.h  i_image_view.h  image_buffer.cpp  image_buffer_impl.h  image_buffer_impl.tpl.h  image_impl.h  image_impl.hpp  image_interpolator.cpp  image_view.cpp  image_view.h  lens_correction_model.cpp  main.cpp  mem_image_r.cpp  mem_image_r.h  mem_image_view_base.h  mem_image_view_base.tpl.h  (+12 more)
doc/: codingstyle.txt  license.txt  overview.txt
doc-src/: codingstyle.txt  coord.fig  customdoxy.css  doxygen.conf.in  fisheye.gp  license.txt  main.txt  mit-lic.txt  overview.txt  sensors.fig  techback.txt  techback_geom.txt  techback_phtrcoord.txt  techback_sizes.txt  tutorial.txt
include/: channel_storage.h  channel_type.h  colour_correction_model.h  colour_correction_queue.h  colour_correction_queue.inl.h  correction_model_base.h  correction_model_queue.h  correction_model_queue.inl.h  exception.h  geom_correction_model.h  geom_correction_queue.h  geom_correction_queue.inl.h  image_buffer.h  image_buffer.tpl.h  image_interpolator.h  image_interpolator.tpl.h  image_transform.h  image_transform.tpl.h  image_view.h  lens_correction_model.h  mem_image_iter_base.h  mem_image_iter_base.tpl.h  mem_image_iter_r.h  mem_image_iter_r.tpl.h  mem_image_iter_w.h  mem_image_iter_w.tpl.h  mem_image_view_base.h  mem_image_view_base.tpl.h  mem_image_view_iter_w.h  mem_image_view_iter_w.tpl.h  mem_image_view_r.h  mem_image_view_r.tpl.h  mem_image_view_w.h  mem_image_view_w.tpl.h  mem_layout.h  mem_storage_info.h  storage_type.h  storagetypes.h  types.h
include/Photoropter/: channel_range.h  channel_storage.h  colour_correction_model.h  colour_correction_queue.h  colour_correction_queue.inl.h  correction_model_base.h  geom_correction_model.h  geom_correction_queue.h  image_buffer.h  image_interpolator.h  image_transform.h  image_transform.tpl.h  mem_image_iter_base.h  mem_image_iter_r.h  mem_image_iter_w.h  mem_image_view_base.h  mem_image_view_r.h  mem_image_view_w.h  mem_layout.h  mem_storage_info.h
include/photoropter/: auto_scaler.h  auto_scaler.tpl.h  channel_range.h  channel_storage.h  channel_type.h  colour_correction_model.h  colour_correction_queue.h  colour_correction_queue.inl.h  colour_correction_queue.tpl.h  colour_tuple.h  colour_tuple.inl.h  colour_tuple.tpl.h  coord_tuple.h  coord_tuple.inl.h  coord_tuple.tpl.h  correction_model_base.h  exception.h  gamma_func.h  geom_correction_model.h  geom_correction_queue.h  geom_correction_queue.inl.h  geom_correction_queue.tpl.h  geometry_type.h  image_buffer.h  image_buffer.tpl.h  image_interpolator.h  image_interpolator.tpl.h  image_transform.h  image_transform.tpl.h  interpolation_type.h  interpolator_base.h  interpolator_base.tpl.h  interpolator_bilinear.h  interpolator_bilinear.tpl.h  interpolator_lanczos.h  interpolator_lanczos.tpl.h  interpolator_nn.h  interpolator_nn.tpl.h  mem_image_iter_base.h  mem_image_iter_base.tpl.h  (+21 more)
include/photoropter/geom/: fisheye_equidist.h  fisheye_equidist.inl.h  fisheye_equisolid.h  fisheye_ortho.h  fisheye_ortho.inl.h  fisheye_stereo.h  fisheye_stereo.inl.h  rectilinear.h
include/photoropter/geometry/: fisheye_equisolid.h  fisheye_equisolid.inl.h  rectilinear.h  rectilinear.inl.h
include/photoropter/interpolator/: interpolator_base.h  interpolator_base.tpl.h  interpolator_bilinear.h  interpolator_lanczos.h  interpolator_lanczos.tpl.h  interpolator_nn.h  interpolator_nn.tpl.h
include/photoropter/mem/: channel_range.h  channel_storage.h  channel_type.h  colour_tuple.h  colour_tuple.tpl.h  coord_tuple.h  coord_tuple.tpl.h  mem_layout.h  mem_storage_info.h  storage_type.h
include/photoropter/model/: colour_correction_model.h  correction_model_base.h  geom_correction_model.h  geometry_convert_geom_model.h  geometry_convert_pixel_model.h  geometry_convert_pixel_model.tpl.h  pixel_correction_model.h  ptlens_geom_model.h  ptlens_pixel_model.h  scaler_geom_model.h  scaler_pixel_model.h  subpixel_correction_model.h  vignetting_colour_model.h
misc/: astylerc  conv_emor.py  format.sh
src/: auto_scaler.cpp  colour_correction_model.cpp  colour_correction_queue.cpp  colour_tuple.cpp  coord_tuple.cpp  correction_model_base.cpp  exception.cpp  gamma_func.cpp  geom_correction_model.cpp  geom_correction_queue.cpp  mem_layout.cpp  modpar_emor.h  modpar_invemor.h  pixel_correction_queue.cpp  subpixel_correction_queue.cpp
src/mem/: mem_layout.cpp
src/model/: correction_model_base.cpp  geometry_convert_geom_model.cpp  geometry_convert_pixel_model.cpp  ptlens_geom_model.cpp  ptlens_pixel_model.cpp  scaler_geom_model.cpp  scaler_pixel_model.cpp  vignetting_colour_model.cpp
testapp/: CMakeLists.txt  main.cpp  parseconf.cpp  parseconf.h  phtrtest.cpp  phtrtest2.cpp  phtrx.cpp  settings.h  transform_wrapper.cpp  transform_wrapper.h  transform_wrapper.tpl.h  vil_pixel_type.h
